--- a/about.html
+++ b/about.html
@@ -53,6 +53,7 @@
                     <img src="img/panda-3.jpg" alt="">
                 </div>
             </section>
+            erkfghbierwbhfiaqwerfiu
         </main>
     </body>
 
