--- a/forms.html
+++ b/forms.html
@@ -44,6 +44,10 @@
                 <label for="down">скачать файл</label>
                 <input id="down" type="file" name="down" accept="image/*">
             </div>
+            <div>
+                <label for="text">comments</label>
+                <input type="text" name="text" id="text">
+            </div>
 
 
         </form>
