--- a/forms.html
+++ b/forms.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <title>forms</title>
         <link rel="shortcut icon" href="img/favicon.ico">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <form  action="#" method="POST">
            <fieldset>
                <legend>Registration</legend>
-               <div>
+               <div class="reg">
                 <input id="registration" type="text" name="registration" placeholder="Name">
                 <input type="email" placeholder="Email" name="email">
                 <input type="password" placeholder="password" name="password">
@@ -49,6 +50,10 @@
                     <input type="text" name="text" id="text">
                 </div>
     
+             </div>
+             <div>
+                 <img class="panda" src="img/panda-1.jpg" alt="panda">
+
              </div>
             
 
