--- a/forms.html
+++ b/forms.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <form  action="#" method="POST">
-           <fieldset>
+           <fieldset class="reg_fil">
                <legend>Registration</legend>
                <div class="reg">
                 <input id="registration" type="text" name="registration" placeholder="Name">
