--- a/items.html
+++ b/items.html
@@ -4,15 +4,23 @@
         <meta charset="UTF-8">
         <title>Домашка</title>
         <link rel="shortcut icon" href="img/favicon.ico">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <a href="index.html">Главная</a>
-                <a href="contacts.html">Контакты</a>
-                <a href="about.html">О Нас</a>
-            </nav>
+        <header class="header">
+            <div class="container">
+                <nav class="main-nav">
+                    <ul class="main_row">
+                        <li><a href="index.html">home</a></li>
+                        <li><a href="#">portfolio</a></li>
+                        <li><a href="items.html">items</a></li>
+                        <li><a href="contacts.html">contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
+    
         <main>
             <div>
                 <a href="#panda1">Панда 1</a>
@@ -20,6 +28,9 @@
                 <a href="#panda3">Панда 3</a>
             </div>
             <section>
+                <div>
+                    <video width="600" height="400" controls src="video/IMG_0708 (1).MOV"></video>
+                </div>
                 <div id="panda1">
                     <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br>
