--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="main_row">
                     <li><a href="index.html">home</a></li>
                     <li><a href="#">portfolio</a></li>
-                    <li><a href="about.html">about</a></li>
+                    <li><a href="items.html">items</a></li>
                     <li><a href="contacts.html">contact</a></li>
                 </ul>
             </nav>
