--- a/contacts.html
+++ b/contacts.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Домашка</title>
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="img/favicon.ico">
         <link rel="stylesheet" href="css/style.css">
         <!-- <link rel="stylesheet" href="css/stylegrid.css"> -->
         <link rel="stylesheet" href="css/contsacts.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header class="header">
@@ -29,11 +31,14 @@
                  <button class="btn" type="button">call</button>
             </div>
             <section class="info">
+                
                 <div>
-                    <audio controls src="audio/file_example_MP3_700KB.mp3">audio</audio>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, quia culpa illum odit facilis iste libero provident obcaecati quasi distinctio.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis eligendi deleniti placeat pariatur, ipsam, blanditiis amet harum porro repellat ducimus magnam, quod vel temporibus! Quisquam vel perferendis animi nihil architecto.
+                    </p>
                 </div>
                 <div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, quia culpa illum odit facilis iste libero provident obcaecati quasi distinctio.</p>
+                    <audio controls src="audio/file_example_MP3_700KB.mp3">audio</audio>
                 </div>
                 <table>
                     <tr>
