--- a/items.html
+++ b/items.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Домашка</title>
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="img/favicon.ico">
-        <link rel="stylesheet" href="css/normalize.css">
+        <!-- <link rel="stylesheet" href="css/normalize.css"> -->
         <link rel="stylesheet" href="css/style.css">
         <!-- <link rel="stylesheet" href="css/stylegrid.css"> -->
         <link rel="stylesheet" href="css/items.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header class="header">
@@ -102,8 +104,8 @@
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit <br>
                          iure veritatis officiis fuga asperiores illo consectetur, minus velit, <br>
-                          quaerat commodi, laudantium optio ratione eligendi <br>
-                         saepe quia necessitatibus voluptatum perspiciatis nisi.
+                          quaerat commodi  eligendi 
+                         saepe quia necessitatibus voluptatum 
                     </p>
                     <img src="img/panda-3.jpg" alt="">
                 </div>
